--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
+spring.security.user.name=ramesh
+spring.security.user.password=ramesh
+spring.security.user.roles=ADMIN
